Fixed the book cards to work with radio button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Library</title>
-
 </head>
 
 <body>
@@ -31,9 +30,9 @@
         </div>
         <fieldset class="radio-row">
             <legend>Have you read this book before?</legend>
-            <input type="radio" id="read" name="read-status">
+            <input type="radio" id="read" name="read-status" value="yes">
             <label for="read" class="radio-label">Yes</label>
-            <input type="radio" id="not-read" name="read-status">
+            <input type="radio" id="not-read" name="read-status" value="no">
             <label for="not-read" class="radio-label">No</label>
         </fieldset>
         <div class="submit" onclick="addBookToLibrary(event)">
@@ -41,8 +40,7 @@
         </div>
     </form>
 
-    <script src=" app.js">
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
